--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 -->
 <!-- home section -->
 <nav>
-	<a href="#home" > Home </a>
-	<a href="#about"> About </a>
-	<a href="#service"> Service </a>
-	<a href="#contact"> contact</a>
+        <a href="index.html" > Home </a>
+        <a href="about.html"> About </a>
+        <a href="service.html"> Service </a>
+        <a href="contact.html"> contact</a>
+
 </nav>
 
-<section id="home" class="home">
 <!-- slide show -->
 <div class="slide-con" >
  <img src="image1.jpg" alt="Slide 1" class="slide">
@@ -42,21 +42,6 @@
 
 <p> Biodiversity—the variety of life on Earth—is crucial for ecosystem resilience. Diverse ecosystems are better equipped to withstand environmental changes, such as climate fluctuations and human impacts. Protecting habitats, from rainforests to coral reefs, is essential for preserving the delicate balance of life on our planet.</p>
 
-</section>
-
-<section id="about"> 
-<h2>The History of Nature: An Evolving Relationship </h2>
-<p> Nature has been an integral part of human existence since the dawn of time. Our understanding and relationship with the natural world have evolved significantly through various historical periods, shaping not only our societies but also the ecosystems around us. From early human interactions with the environment to modern environmentalism, the history of nature reflects a complex interplay of reverence, exploitation, and the quest for balance.</p>
-
-<h3>Early Human Interaction</h3>
-<p> In prehistoric times, humans lived in close harmony with nature, relying on hunting, gathering, and later, agriculture for survival. Early civilizations developed a profound respect for natural elements, often attributing spiritual significance to animals, plants, and landscapes. This connection was essential for survival; communities learned to read the signs of nature, understand seasonal changes, and adapt their lifestyles accordingly.</p>
-
-<p>The Agricultural Revolution around 10,000 BCE marked a turning point. As humans transitioned from nomadic lifestyles to settled farming, they began to domesticate plants and animals. This shift not only transformed their way of life but also significantly altered ecosystems, leading to the rise of complex societies and the beginnings of environmental manipulation.</p>
-
-<h3> Classical Antiquity and Philosophical Perspectives </h3>
-<p>The study of nature found a prominent place in the thoughts of ancient philosophers. In classical antiquity, figures such as Aristotle and Pliny the Elder contributed to early scientific inquiry, laying the groundwork for what would eventually become the natural sciences. Their work emphasized observation and categorization, setting a precedent for future scientific exploration.</p>
-
-<p> Additionally, many ancient cultures incorporated nature into their religious beliefs. The reverence for gods and spirits that represented natural phenomena reflected a deep respect for the environment, acknowledging its power and importance in daily life.</p>
 <script src="script.js"></script>
 
 </body>
