--- a/nature/landforms.html
+++ b/nature/landforms.html
@@ -56,19 +56,19 @@
     <path fill-rule="evenodd" d="M0 10a8 8 0 1 1 15.547 2.661c-.442 1.253-1.845 1.602-2.932 1.25C11.309 13.488 9.475 13 8 13c-1.474 0-3.31.488-4.615.911-1.087.352-2.49.003-2.932-1.25A7.988 7.988 0 0 1 0 10zm8-7a7 7 0 0 0-6.603 9.329c.203.575.923.876 1.68.63C4.397 12.533 6.358 12 8 12s3.604.532 4.923.96c.757.245 1.477-.056 1.68-.631A7 7 0 0 0 8 3z"/>
   </symbol>
   <symbol id="table" viewBox="0 0 16 16">
-    <path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm15 2h-4v3h4V4zm0 4h-4v3h4V8zm0 4h-4v3h3a1 1 0 0 0 1-1v-2zm-5 3v-3H6v3h4zm-5 0v-3H1v2a1 1 0 0 0 1 1h3zm-4-4h4V8H1v3zm0-4h4V4H1v3zm5-3v3h4V4H6zm4 4H6v3h4V8z"/>
+    <path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm15 2h-4v3h4V4zm0 4h-4v3h4V8zm0 4h-4v3h4a1 1 0 0 0 1-1v-2zm-5 3v-3H6v3h4zm-5 0v-3H1v2a1 1 0 0 0 1 1h4zm-4-4h4V8H1v3zm0-4h4V4H1v3zm5-3v3h4V4H6zm4 4H6v3h4V8z"/>
   </symbol>
   <symbol id="people-circle" viewBox="0 0 16 16">
     <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
     <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
   </symbol>
   <symbol id="grid" viewBox="0 0 16 16">
-    <path d="M1 2.5A1.5 1.5 0 0 1 2.5 1h3A1.5 1.5 0 0 1 7 2.5v3A1.5 1.5 0 0 1 5.5 7h-3A1.5 1.5 0 0 1 1 5.5v-3zM2.5 2a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3zm6.5.5A1.5 1.5 0 0 1 10.5 1h3A1.5 1.5 0 0 1 15 2.5v3A1.5 1.5 0 0 1 13.5 7h-3A1.5 1.5 0 0 1 9 5.5v-3zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3zM1 10.5A1.5 1.5 0 0 1 2.5 9h3A1.5 1.5 0 0 1 7 10.5v3A1.5 1.5 0 0 1 5.5 15h-3A1.5 1.5 0 0 1 1 13.5v-3zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3zm6.5.5A1.5 1.5 0 0 1 10.5 9h3a1.5 1.5 0 0 1 1.5 1.5v3a1.5 1.5 0 0 1-1.5 1.5h-3A1.5 1.5 0 0 1 9 13.5v-3zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3z"/>
+    <path d="M1 2.5A1.5 1.5 0 0 1 2.5 1h4A1.5 1.5 0 0 1 7 2.5v3A1.5 1.5 0 0 1 5.5 7h-3A1.5 1.5 0 0 1 1 5.5v-3zM2.5 2a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3zm6.5.5A1.5 1.5 0 0 1 10.5 1h4A1.5 1.5 0 0 1 15 2.5v3A1.5 1.5 0 0 1 13.5 7h-3A1.5 1.5 0 0 1 9 5.5v-3zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3zM1 10.5A1.5 1.5 0 0 1 2.5 9h4A1.5 1.5 0 0 1 7 10.5v3A1.5 1.5 0 0 1 5.5 15h-3A1.5 1.5 0 0 1 1 13.5v-3zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3zm6.5.5A1.5 1.5 0 0 1 10.5 9h4a1.5 1.5 0 0 1 1.5 1.5v3a1.5 1.5 0 0 1-1.5 1.5h-3A1.5 1.5 0 0 1 9 13.5v-3zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3z"/>
   </symbol>
 </svg>
 
 <main>
-  
+  <h1 class="visually-hidden">Headers examples</h1>
   
   <div class="b-example-divider"></div>
 
@@ -76,8 +76,8 @@
     <header class="d-flex justify-content-center py-3">
       <ul class="nav nav-pills">
         <li class="nav-item"><a href="home.html" class="nav-link " aria-current="page">Home</a></li>
-        <li class="nav-item"><a href="animal.html" class="nav-link">Animals</a></li>
-        <li class="nav-item"><a href="bird.html" class="nav-link">Birds</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
         <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
         <li class="nav-item"><a href="#" class="nav-link">About</a></li>
       </ul>
@@ -177,28 +177,74 @@
       </div>
 
     <div class="right-column">
-      <h2>Biodiversity</h2>
-      <p>Biodiversity refers to the variety of life on Earth, encompassing the differences in species, genetic variation within those species, and the ecosystems they form. It plays a critical role in maintaining the health of our planet and provides numerous benefits to humanity.</p>
-      <img src="images/image11.jpeg" alt="types of biodiversity" class="image-right">
-      <h3>Types of Biodiversity</h3>
+      
+    <h2>What are Landforms?</h2>
+    <p>Landforms are natural features of the Earth's surface that result from various geological processes. They can vary widely in size, shape, and formation mechanisms. Here’s an overview of different types of landforms, their characteristics, and how they are formed:</p>
 
-      <h4>Genetic Diversity</h4>
-      <ul>
-          <li>Refers to the variation of genes within a species.</li>
-          <li>This diversity allows populations to adapt to changing environments and resist diseases.</li>
-      </ul>
-  
-      <h4>Species Diversity</h4>
-      <ul>
-          <li>Represents the variety of species within a particular habitat or ecosystem.</li>
-          <li>A higher number of species usually indicates a healthier ecosystem.</li>
-      </ul>
-  
-      <h4>Ecosystem Diversity</h4>
-      <ul>
-          <li>Encompasses the different habitats, communities, and ecological processes.</li>
-          <li>It includes various ecosystems, such as forests, wetlands, grasslands, and oceans.</li>
-      </ul>
+    <h3>Types of Landforms</h3>
+
+    <h4>Mountains</h4>
+    <ul>
+        <li><strong>Description</strong>: Elevated landforms that rise prominently above their surroundings.</li>
+        <li><strong>Formation</strong>: Typically formed through tectonic forces, volcanic activity, or erosion.</li>
+        <li><strong>Examples</strong>: The Himalayas, Rockies, and Andes.</li>
+    </ul>
+
+    <h4>Hills</h4>
+    <ul>
+        <li><strong>Description</strong>: Smaller than mountains, hills are raised areas of land with a rounded top.</li>
+        <li><strong>Formation</strong>: Often formed by erosion, deposition, or volcanic activity.</li>
+        <li><strong>Examples</strong>: The Appalachian Hills, the English Downs.</li>
+    </ul>
+
+    <h4>Plateaus</h4>
+    <ul>
+        <li><strong>Description</strong>: Flat, elevated areas of land that have been uplifted by tectonic forces.</li>
+        <li><strong>Formation</strong>: Can form through volcanic activity, erosion of surrounding land, or sediment deposition.</li>
+        <li><strong>Examples</strong>: The Colorado Plateau, Deccan Plateau.</li>
+    </ul>
+
+    <h4>Valleys</h4>
+    <ul>
+        <li><strong>Description</strong>: Low-lying areas between mountains or hills, often shaped like a V or U.</li>
+        <li><strong>Formation</strong>: Typically formed by river erosion or glacial activity.</li>
+        <li><strong>Examples</strong>: The Great Rift Valley, Yosemite Valley.</li>
+    </ul>
+
+    <h4>Plains</h4>
+    <ul>
+        <li><strong>Description</strong>: Broad, flat areas of land with few changes in elevation.</li>
+        <li><strong>Formation</strong>: Formed by sediment deposition from rivers, glaciers, or ocean actions.</li>
+        <li><strong>Examples</strong>: The Great Plains in North America, the Pampas in Argentina.</li>
+    </ul>
+
+    <h4>Deserts</h4>
+    <ul>
+        <li><strong>Description</strong>: Arid regions with very little rainfall, characterized by sand dunes, rocky plateaus, and sparse vegetation.</li>
+        <li><strong>Formation</strong>: Formed by climatic conditions, erosion, and sedimentation.</li>
+        <li><strong>Examples</strong>: The Sahara Desert, the Mojave Desert.</li>
+    </ul>
+
+    <h4>Canyons</h4>
+    <ul>
+        <li><strong>Description</strong>: Deep, narrow valleys with steep sides, often carved by river erosion.</li>
+        <li><strong>Formation</strong>: Formed primarily through the persistent flow of rivers over long periods.</li>
+        <li><strong>Examples</strong>: The Grand Canyon, Antelope Canyon.</li>
+    </ul>
+
+    <h4>Islands</h4>
+    <ul>
+        <li><strong>Description</strong>: Landforms surrounded by water, ranging from small land masses to large land areas.</li>
+        <li><strong>Formation</strong>: Can form through volcanic activity, sediment accumulation, or rising sea levels.</li>
+        <li><strong>Examples</strong>: The Hawaiian Islands, the Galápagos Islands.</li>
+    </ul>
+
+    <h4>Coastal Landforms</h4>
+    <ul>
+        <li><strong>Description</strong>: Features found along coastlines, including beaches, cliffs, and estuaries.</li>
+        <li><strong>Formation</strong>: Created by wave action, erosion, and sediment deposition.</li>
+        <li><strong>Examples</strong>: The Cliffs of Moher, the Florida Keys.</li>
+    </ul>
   
     </div>
 
