added the insects reptiles html page

--- a/nature/animal.html
+++ b/nature/animal.html
@@ -77,14 +77,15 @@
       <ul class="nav nav-pills">
         <li class="nav-item"><a href="home.html" class="nav-link " aria-current="page">Home</a></li>
         <li class="nav-item"><a href="animal.html" class="nav-link">Animals</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+        <li class="nav-item"><a href="bird.html" class="nav-link">Birds</a></li>
+        <li class="nav-item"><a href="insect.html" class="nav-link">Insects</a></li>
+        <li class="nav-item"><a href="reptile.html" class="nav-link">Reptiles</a></li>
       </ul>
     </header>
   </div>
 
   <div class="b-example-divider"></div>
+
 
   <div class="animal">
     <h1> Wild Animals</h1>
