--- a/nature/insect.html
+++ b/nature/insect.html
@@ -88,30 +88,31 @@
 
 
   <div class="animal">
-    <h1> Birds</h1>
+    <h1> Insects</h1>
     <hr>
     <div class="animal-container">
-        <img src="images/birds/img1.jpeg" alt="birds" class="animal-image">
-        <img src="images/birds/img2.jpeg" alt="birds" class="animal-image">
-        <img src="images/birds/img3.jpeg" alt="birds" class="animal-image">
-        <img src="images/birds/img4.jpeg" alt="birds" class="animal-image">
-        <img src="images/birds/img5.jpeg" alt="birds" class="animal-image">
-        <img src="images/birds/img6.jpeg" alt="birds" class="animal-image">
-        <img src="images/birds/img7.jpeg" alt="birds" class="animal-image">
-        <img src="images/birds/img8.jpeg" alt="birds" class="animal-image">
-        <img src="images/birds/img9.jpeg" alt="birds" class="animal-image">
-        <img src="images/birds/img10.jpeg" alt="birds" class="animal-image">
-        <img src="images/birds/img11.jpeg" alt="birds" class="animal-image">
-        <img src="images/birds/img12.jpeg" alt="birds" class="animal-image">
-        <img src="images/birds/img13.jpeg" alt="birds" class="animal-image">
-        <img src="images/birds/img14.jpeg" alt="birds" class="animal-image">
-        <img src="images/birds/img15.jpeg" alt="birds" class="animal-image">
-      <img src="images/birds/img16.jpeg" alt="birds" class="animal-image">
-      <img src="images/birds/img17.jpeg" alt="birds" class="animal-image">
-      <img src="images/birds/img18.jpeg" alt="birds" class="animal-image">
-      <img src="images/birds/img19.jpeg" alt="birds" class="animal-image">
-      <img src="images/birds/img20.jpeg" alt="birds" class="animal-image">
-      
+        <img src="images/insects/img1.jpeg" alt="insects" class="animal-image">
+        <img src="images/insects/img2.jpeg" alt="insects" class="animal-image">
+        <img src="images/insects/img3.jpeg" alt="insects" class="animal-image">
+        <img src="images/insects/img4.jpeg" alt="insects" class="animal-image">
+        <img src="images/insects/img5.jpeg" alt="insects" class="animal-image">
+        <img src="images/insects/img6.jpeg" alt="insects" class="animal-image">
+        <img src="images/insects/img7.jpeg" alt="insects" class="animal-image">
+        <img src="images/insects/img8.jpeg" alt="insects" class="animal-image">
+        <img src="images/insects/img9.jpeg" alt="insects" class="animal-image">
+        <img src="images/insects/img10.jpeg" alt="insects" class="animal-image">
+        <img src="images/insects/img11.jpeg" alt="insects" class="animal-image">
+        <img src="images/insects/img12.jpeg" alt="insects" class="animal-image">
+        <img src="images/insects/img13.jpeg" alt="insects" class="animal-image">
+        <img src="images/insects/img14.jpeg" alt="insects" class="animal-image">
+        <img src="images/insects/img15.jpeg" alt="insects" class="animal-image">
+      <img src="images/insects/img16.jpeg" alt=" insects" class="animal-image">
+      <img src="images/insects/img17.jpeg" alt=" insects" class="animal-image">
+      <img src="images/insects/img18.jpeg" alt=" insects" class="animal-image">
+      <img src="images/insects/img19.jpeg" alt=" insects" class="animal-image">
+      <img src="images/insects/img20.jpeg" alt=" insects" class="animal-image">
+      <img src="images/insects/img21.jpeg" alt=" insects" class="animal-image">
+      <img src="images/insects/img22.jpeg" alt=" insects" class="animal-image">
     </div>
 </div>
   <script src="js/bootstrap.bundle.min.js"></script>
