--- a/nature/reptile.html
+++ b/nature/reptile.html
@@ -86,32 +86,45 @@
 
   <div class="b-example-divider"></div>
 
-
   <div class="animal">
-    <h1> Birds</h1>
+    <h1> Reptiles</h1>
     <hr>
     <div class="animal-container">
-        <img src="images/birds/img1.jpeg" alt="birds" class="animal-image">
-        <img src="images/birds/img2.jpeg" alt="birds" class="animal-image">
-        <img src="images/birds/img3.jpeg" alt="birds" class="animal-image">
-        <img src="images/birds/img4.jpeg" alt="birds" class="animal-image">
-        <img src="images/birds/img5.jpeg" alt="birds" class="animal-image">
-        <img src="images/birds/img6.jpeg" alt="birds" class="animal-image">
-        <img src="images/birds/img7.jpeg" alt="birds" class="animal-image">
-        <img src="images/birds/img8.jpeg" alt="birds" class="animal-image">
-        <img src="images/birds/img9.jpeg" alt="birds" class="animal-image">
-        <img src="images/birds/img10.jpeg" alt="birds" class="animal-image">
-        <img src="images/birds/img11.jpeg" alt="birds" class="animal-image">
-        <img src="images/birds/img12.jpeg" alt="birds" class="animal-image">
-        <img src="images/birds/img13.jpeg" alt="birds" class="animal-image">
-        <img src="images/birds/img14.jpeg" alt="birds" class="animal-image">
-        <img src="images/birds/img15.jpeg" alt="birds" class="animal-image">
-      <img src="images/birds/img16.jpeg" alt="birds" class="animal-image">
-      <img src="images/birds/img17.jpeg" alt="birds" class="animal-image">
-      <img src="images/birds/img18.jpeg" alt="birds" class="animal-image">
-      <img src="images/birds/img19.jpeg" alt="birds" class="animal-image">
-      <img src="images/birds/img20.jpeg" alt="birds" class="animal-image">
-      
+        <img src="images/reptiles/img1.jpeg" alt="reptiles" class="animal-image">
+        <img src="images/reptiles/img2.jpeg" alt="reptiles" class="animal-image">
+        <img src="images/reptiles/img3.jpeg" alt="reptiles" class="animal-image">
+        <img src="images/reptiles/img4.jpeg" alt="reptiles" class="animal-image">
+        <img src="images/reptiles/img5.jpeg" alt="reptiles" class="animal-image">
+        <img src="images/reptiles/img6.jpeg" alt="reptiles" class="animal-image">
+        <img src="images/reptiles/img7.jpeg" alt="reptiles" class="animal-image">
+        <img src="images/reptiles/img8.jpeg" alt="reptiles" class="animal-image">
+        <img src="images/reptiles/img9.jpeg" alt="reptiles" class="animal-image">
+        <img src="images/reptiles/img10.jpeg" alt="reptiles" class="animal-image">
+        <img src="images/reptiles/img11.jpeg" alt="reptiles" class="animal-image">
+        <img src="images/reptiles/img12.jpeg" alt="reptiles" class="animal-image">
+        <img src="images/reptiles/img13.jpeg" alt="reptiles" class="animal-image">
+    </div>
+</div>
+
+<div class="animal">
+    <h1> Snackes </h1>
+    <hr>
+    <div class="animal-container">
+      <img src="images/snakes/img1.jpeg" alt="reptiles" class="animal-image">
+      <img src="images/snakes/img2.jpeg" alt="reptiles" class="animal-image">
+      <img src="images/snakes/img3.jpeg" alt="reptiles" class="animal-image">
+      <img src="images/snakes/img4.jpeg" alt="reptiles" class="animal-image">
+      <img src="images/snakes/img5.jpeg" alt="reptiles" class="animal-image">
+      <img src="images/snakes/img6.jpeg" alt="reptiles" class="animal-image">
+      <img src="images/snakes/img7.jpeg" alt="reptiles" class="animal-image">
+      <img src="images/snakes/img8.jpeg" alt="reptiles" class="animal-image">
+      <img src="images/snakes/img9.jpeg" alt="reptiles" class="animal-image">
+      <img src="images/snakes/img10.jpeg" alt="reptiles" class="animal-image">
+      <img src="images/snakes/img11.jpeg" alt="reptiles" class="animal-image">
+      <img src="images/snakes/img12.jpeg" alt="reptiles" class="animal-image">
+      <img src="images/snakes/img13.jpeg" alt="reptiles" class="animal-image">
+      <img src="images/snakes/img14.jpeg" alt="reptiles" class="animal-image">
+      <img src="images/snakes/img15.jpeg" alt="reptiles" class="animal-image">
     </div>
 </div>
   <script src="js/bootstrap.bundle.min.js"></script>
